cmake_minimum_required(VERSION 3.21)
project(exam)

set(CMAKE_CXX_STANDARD 14)

add_executable(exam main.cpp)
add_executable(5.7 5.7.cpp)
add_executable(5.14 5.14.cpp)
add_executable(7.7 7.7.cpp)
add_executable(7.13 7.13.cpp)
add_executable(8.7 8.7.cpp)
add_executable(9.4 9.4.cpp)
add_executable(9.7 9.7.cpp)
add_executable(13.4.2 13.4.2.cpp)
add_executable(13.4.6 13.4.6.cpp)
add_executable(14.3 14.3.cpp)
add_executable(14.4 14.4.cpp)
add_executable(2 2.cpp)
add_executable(1 1.cpp)
add_executable(13.3.4 13.3.4.cpp)